--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express": "^4.17.1",
     "flag-icon-css": "^3.4.6",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^2.3.0",
