--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "moment": "^2.24.0",
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^2.3.0",
+    "ng2-odometer": "^1.1.3",
     "ngx-bootstrap": "^5.2.0",
     "ngx-perfect-scrollbar": "^8.0.0",
     "path": "^0.12.7",
